Update 0. linear R concept (1).ipynb

--- a/0. linear R concept (1).ipynb
+++ b/0. linear R concept (1).ipynb
@@ -1,3 +1,4 @@
+# 12 29 32 23  original outputs 
 {
  "cells": [
   {
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "train = data[['a','b']]\n",
-    "y     = data.c.values"
+    "y     = data.c.values" # 12 29 32 23  original outputs 
+    
    ]
   },
   {
